--- a/public/index.html
+++ b/public/index.html
@@ -1,42 +1,19 @@
 <!DOCTYPE html>
-<html style="height: auto;" lang="en">
+<html style="height: auto; direction: ltr;" lang="en">
 <!-- Font Awesome Icons -->
 <link rel="stylesheet" href="http://localhost:3000/plugins/fontawesome-free/css/all.min.css">
 <!-- Theme style -->
 <link rel="stylesheet" href="http://localhost:3000/plugins/fontawesome-free/css/all.min.css">
-<!-- daterange picker -->
-<link rel="stylesheet" href="http://localhost:3000/plugins/daterangepicker/daterangepicker.css">
-<!-- iCheck for checkboxes and radio inputs -->
-<link rel="stylesheet" href="http://localhost:3000/plugins/icheck-bootstrap/icheck-bootstrap.min.css">
-<!-- Bootstrap Color Picker -->
-<link rel="stylesheet" href="http://localhost:3000/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.min.css">
-<!-- Tempusdominus Bootstrap 4 -->
-<link rel="stylesheet"
-  href="http://localhost:3000/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css">
-<!-- Select2 -->
-<link rel="stylesheet" href="http://localhost:3000/plugins/select2/css/select2.min.css">
-<link rel="stylesheet" href="http://localhost:3000/plugins/select2-bootstrap4-theme/select2-bootstrap4.min.css">
-<!-- Bootstrap4 Duallistbox -->
-<link rel="stylesheet" href="http://localhost:3000/plugins/bootstrap4-duallistbox/bootstrap-duallistbox.min.css">
-<!-- BS Stepper -->
-<link rel="stylesheet" href="http://localhost:3000/plugins/bs-stepper/css/bs-stepper.min.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<link rel="stylesheet" href="http://localhost:3000/plugins/dropzone/min/dropzone.min.css">
-<!-- Theme style -->
 
-<link rel="stylesheet" href="http://localhost:3000/dist/css/adminlte.min.css">
-<link rel="stylesheet" href="http://localhost:3000/dist/css/style1.css">
-
-<link rel="stylesheet" href="http://localhost:3000/dist/css/bootstrap-rtl.css">
-<!-- Theme style -->
-<link rel="stylesheet" href="http://localhost:3000/dist/css/myEdit.css">
-<!-- Theme style -->
-<link rel="stylesheet" href="http://localhost:3000/dist/css/style.css">
 <style>
   body {
-    /* margin: 0;
-    padding: 0; */
-    font-family: sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: 'Roboto', sans-serif;
     height: 100vh;
     /* background-color: brown; */
   }
@@ -65,8 +42,17 @@
   h6,
   a,
   td,
+  input,
+  select,
+  textarea,
+
   label {
-    font-family: "ExpoArabic-Light.ttf";
+    font-family: 'Roboto', sans-serif;
+  }
+
+  td {
+
+    text-align: right !important;
   }
 </style>
 
@@ -77,86 +63,12 @@
 </head>
 
 <body>
-  <div class="mt-4" id="root">
+  <div id="root">
 
   </div>
   <!-- REQUIRED SCRIPTS -->
 
-  <!-- jQuery -->
-  <script src="http://localhost:3000/plugins/jquery/jquery.min.js"></script>
-  <script src="http://localhost:3000/https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-  <!-- Bootstrap 4 -->
-  <script src="http://localhost:3000/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="http://localhost:3000/dist/js/adminlte.min.js"></script>
-
-
-  <!-- jQuery -->
-  <script src="http://localhost:3000/plugins/select2/js/select2.full.min.js"></script>
-  <!-- Bootstrap4 Duallistbox -->
-  <script src="http://localhost:3000/plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
-  <!-- InputMask -->
-  <script src="http://localhost:3000/plugins/moment/moment.min.js"></script>
-  <script src="http://localhost:3000/plugins/inputmask/jquery.inputmask.min.js"></script>
-  <!-- date-range-picker -->
-  <script src="http://localhost:3000/plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- bootstrap color picker -->
-  <script src="http://localhost:3000/plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script src="http://localhost:3000/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Bootstrap Switch -->
-  <script src="http://localhost:3000/plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-  <!-- BS-Stepper -->
-  <script src="http://localhost:3000/plugins/bs-stepper/js/bs-stepper.min.js"></script>
-  <!-- dropzonejs -->
-  <script src="http://localhost:3000/plugins/dropzone/min/dropzone.min.js"></script>
-  <!-- AdminLTE App -->
-
-
-  <!-- jQuery -->
-  <script src="http://localhost:3000/../../plugins/jquery/jquery.min.js"></script>
-  <!-- Bootstrap 4 -->
-  <script src="http://localhost:3000/../../plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
-  <!-- Select2 -->
-  <script src="http://localhost:3000/../../plugins/select2/js/select2.full.min.js"></script>
-  <!-- Bootstrap4 Duallistbox -->
-  <script src="http://localhost:3000/../../plugins/bootstrap4-duallistbox/jquery.bootstrap-duallistbox.min.js"></script>
-  <!-- InputMask -->
-  <script src="http://localhost:3000/../../plugins/moment/moment.min.js"></script>
-  <script src="http://localhost:3000/../../plugins/inputmask/jquery.inputmask.min.js"></script>
-  <!-- date-range-picker -->
-  <script src="http://localhost:3000/../../plugins/daterangepicker/daterangepicker.js"></script>
-  <!-- bootstrap color picker -->
-  <script src="http://localhost:3000/../../plugins/bootstrap-colorpicker/js/bootstrap-colorpicker.min.js"></script>
-  <!-- Tempusdominus Bootstrap 4 -->
-  <script
-    src="http://localhost:3000/../../plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
-  <!-- Bootstrap Switch -->
-  <script src="http://localhost:3000/../../plugins/bootstrap-switch/js/bootstrap-switch.min.js"></script>
-  <!-- BS-Stepper -->
-  <script src="http://localhost:3000/../../plugins/bs-stepper/js/bs-stepper.min.js"></script>
-  <!-- dropzonejs -->
-  <script src="http://localhost:3000/../../plugins/dropzone/min/dropzone.min.js"></script>
-  <!-- AdminLTE App -->
-  <script src="http://localhost:3000/../../dist/js/adminlte.min.js"></script>
-  <!-- AdminLTE for demo purposes -->
-  <script src="http://localhost:3000/../../dist/js/demo.js"></script>
-  <!-- Page specific script -->
-
-  <script src="http://localhost:3000/script.js"></script>
-  <script>
-
-
-    $(document).ready(function () {
-      console.log("ready!");
-      $(".dropdown").on("click", function (e) {
-        console.log("click");
-        e.preventDefault();
-        $(this).toggleClass("show");
-      });
-    });
-  </script>
 
 </body>
 
